[gd_scene load_steps=10 format=2]

[ext_resource path="res://app/Menu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/COUTURE-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/Sofia-Regular.otf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/COUTURE-Bold.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/fonts/Sofia-Regular.otf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[node name="Menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MusicButton" type="Button" parent="."]
margin_left = 981.302
margin_top = 25.1494
margin_right = 1072.3
margin_bottom = 45.1494
disabled = true
text = "Music - Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="."]
margin_left = 1106.3
margin_top = 25.2889
margin_right = 1148.3
margin_bottom = 45.2889
disabled = true
text = "Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMenu" type="Node" parent="."]

[node name="TitleLabel" type="Label" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.14
margin_top = -218.352
margin_right = 117.86
margin_bottom = -185.352
custom_fonts/font = SubResource( 2 )
text = "Theogenesis"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -216.562
margin_top = -595.885
margin_right = 230.438
margin_bottom = -358.885
custom_fonts/font = SubResource( 4 )
text = "Your family has lived in exile for many years. Your mother, First Prophet of The One True God was seen as a threat from the old king. However on her deathbed, your mother reveals to you her latest vision : the old king is gone and your birthplace is ripe for the renewal of your faith. You are now the best and last hope for your fledging religion.

 Convert the whole of the kingdom to keep it alive !"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="StartMenu"]
anchor_left = 0.500718
anchor_top = 1.0
anchor_right = 0.500718
anchor_bottom = 1.0
margin_left = -96.1969
margin_top = -315.82
margin_right = 106.803
margin_bottom = -264.82
custom_fonts/font = SubResource( 6 )
text = "Start your journey !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpMenu" type="Node" parent="."]

[node name="CloseButton" type="Button" parent="HelpMenu"]
visible = false
anchor_left = 0.500718
anchor_top = 1.0
anchor_right = 0.500718
anchor_bottom = 1.0
margin_left = -87.7351
margin_top = -112.0
margin_right = 95.2649
margin_bottom = -61.0
custom_fonts/font = SubResource( 6 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpLabel" type="Label" parent="HelpMenu"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -214.223
margin_top = -504.679
margin_right = 232.777
margin_bottom = -288.679
custom_fonts/font = SubResource( 4 )
text = "You character is the simple-circle with your numbers of followers inside. You can move with the arrows on your keyboard.

Your objectif is to convert all the cities (the double-circles). Each city has an influence number, you need to transfer more followers than the influence number to convert the city. Transfer is done through contact.

Once a city has been converted it will start to spawn follower groups that you can add to your own followers."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinMenu" type="Node" parent="."]

[node name="WinLabel" type="Label" parent="WinMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -164.0
margin_right = 179.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 8 )
text = "Congralutations !

Your efforts have paid off, you have succeeded in conquering all the major cities of the kingdom. Your God and your mother, the Holy Prophet, is revered by the whole  kingdom

You have kept your faith alive against all odds and it is now enshrined for all eternity."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="WinMenu"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.4839
margin_top = -294.47
margin_right = 57.5161
margin_bottom = -255.47
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="StartMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HelpMenu/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="WinMenu/RestartButton" to="." method="_on_RestartButton_pressed"]
